--- a/.github/workflows/ai.yml
+++ b/.github/workflows/ai.yml
@@ -9,6 +9,8 @@ jobs:
     chat:
         runs-on: ubuntu-latest
         steps:
+            - name: Debug Comment Body
+              run: echo "${{ github.event.comment.body }}"
             - uses: ca-dp/code-butler@v1
               with:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
