--- a/.github/workflows/ai.yml
+++ b/.github/workflows/ai.yml
@@ -15,3 +15,5 @@ jobs:
               with:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+                  cmd: chat
+                  comment_body: ${{ github.event.comment.body }}
