--- a/.github/workflows/upload-artifact.yml
+++ b/.github/workflows/upload-artifact.yml
@@ -1,20 +1,23 @@
 jobs:
-    capture:
-        runs-on: ubuntu-latest
-        defaults:
-          run:
-            working-directory: upper
-        steps:
-          - uses: actions/checkout@v4
-          - uses: actions/setup-go@v5
-            with:
-              go-version: 1.22
-              cache-dependency-path: ./upper/go.sum
-          - run: ls
-          - run: go build
-          - run: ls
-          - run: go test -v
-          - uses: actions/upload-artifact@v3
-            with:
-               path: /upper/upper
-               name: build 
+  capture:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: upper
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-go@v5
+        with:
+          go-version: 1.22
+          cache-dependency-path: ./upper/go.sum
+
+      - run: ls
+      - run: go build
+      - run: ls
+      - run: go test -v
+
+      - uses: actions/upload-artifact@v3
+        with:
+          path: upper/upper
+          name: build
